# semrec_plugins

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  package.xml
include/semrec_plugins/console/: PluginConsole.h
include/semrec_plugins/experiment-context/: PluginExperimentContext.h
include/semrec_plugins/gazebo/: PluginGazebo.h
include/semrec_plugins/imagecapturer/: CImageCapturer.h  PluginImageCapturer.h
include/semrec_plugins/interactive/: InteractiveObject.h  PluginInteractive.h
include/semrec_plugins/supervisor/: PluginSupervisor.h
src/console/: PluginConsole.cpp
src/experiment-context/: PluginExperimentContext.cpp
src/experiment_context/: PluginExperimentContext.cpp
src/gazebo/: PluginGazebo.cpp
src/imagecapturer/: CImageCapturer.cpp  PluginImageCapturer.cpp
src/interactive/: InteractiveObject.cpp  PluginInteractive.cpp
src/supervisor/: PluginSupervisor.cpp
